...

            CalendarView()
                .tabItem { Label("Calendar", systemImage: "calendar") }
                .tag(AppState.Tab.calendar)

            GamificationView()
                .tabItem { Label("Activities", systemImage: "sparkles") }
                .tag(AppState.Tab.activities)

            ProfileView()
                .tabItem { Label("Profile", systemImage: "person") }
                .tag(AppState.Tab.profile)

...
